--- a/code/app/src/main/res/navigation/navigation_graph.xml
+++ b/code/app/src/main/res/navigation/navigation_graph.xml
@@ -38,7 +38,11 @@
         android:id="@+id/frgRecipeDetail"
         android:name="com.example.mealclue.view.fragments.RecipeDetailFragment"
         android:label="Recipe Detail"
-        tools:layout="@layout/fragment_recipe_detail" />
+        tools:layout="@layout/fragment_recipe_detail" >
+        <argument
+            android:name="argRecipeId"
+            android:defaultValue="-1" />
+    </fragment>
 
     <fragment
         android:id="@+id/frgPlanDetail"
