--- a/code/app/src/main/res/layout/fragment_profile.xml
+++ b/code/app/src/main/res/layout/fragment_profile.xml
@@ -85,7 +85,8 @@
                     <TextView
                         android:id="@+id/txtRecipeName"
                         style="@style/TextMedium"
-                        android:layout_width="wrap_content"
+
+ android:textAlignment="center"                       android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/recipe_name"
                         android:textSize="@dimen/text_x_large"
