--- a/code/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/code/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -6,31 +6,60 @@
     android:orientation="vertical"
     tools:context=".view.fragments.RecipeDetailFragment">
 
-    <ImageView
-        android:id="@+id/imgRecipeThumb"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:contentDescription="@string/recipe_image"
-        android:scaleType="centerCrop"
-        android:src="@drawable/login_background" />
+        android:layout_height="150dp">
+
+        <ImageView
+            android:id="@+id/imgRecipeThumb"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.7"
+            android:contentDescription="@string/login_background"
+            android:scaleType="centerCrop"
+            android:src="@drawable/login_background" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/gradient_bottom_overlay" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:backgroundTint="@android:color/transparent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/wrapper_padding"
+            android:paddingEnd="@dimen/wrapper_padding"
+            >
+
+
+            <TextView
+                android:id="@+id/txtRecipeName"
+                style="@style/TextMedium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/recipe_name"
+                android:textSize="@dimen/text_x_large"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </FrameLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="top|center_horizontal"
         android:orientation="vertical"
-        android:padding="@dimen/wrapper_padding">
 
-        <TextView
-            android:id="@+id/txtRecipeName"
-            style="@style/TextBold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/recipe_name"
-            android:textSize="@dimen/text_xx_large" />
-        <Space
-            android:layout_width="@dimen/space_medium"
-            android:layout_height="@dimen/space_medium"/>
+        android:padding="@dimen/wrapper_padding">
 
         <!-- Step Buttons -->
         <androidx.recyclerview.widget.RecyclerView
@@ -43,7 +72,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerIngredients"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             />
 
         <!-- Cooking Instruction TextView (Visible on Steps 2+) -->
@@ -57,11 +86,18 @@
             android:paddingTop="16dp"/>
 
         <Space style="@style/SpaceXLarge"/>
-        <Button
-            style="@style/ButtonField"
-            android:text="@string/back"
-            />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/wrapper_padding"
+        android:paddingEnd="@dimen/wrapper_padding"
+        >
+        <include
+            android:id="@+id/incBotButtons"
+            layout="@layout/inc_bottom_buttons" />
+    </LinearLayout>
 
+    <Space style="@style/SpaceXLarge"/>
 </LinearLayout>
