--- a/code/app/src/main/res/layout/fragment_settings.xml
+++ b/code/app/src/main/res/layout/fragment_settings.xml
@@ -37,4 +37,12 @@
         android:text="@string/save_settings"
         android:id="@+id/btnSaveSettings"
         />
+    <Space
+        style="@style/SpaceMedium"
+        />
+    <Button
+        android:id="@+id/btnLogout"
+        style="@style/ButtonField"
+        android:text="@string/log_out"
+        />
 </LinearLayout>
