--- a/code/app/src/main/res/layout/fragment_social.xml
+++ b/code/app/src/main/res/layout/fragment_social.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="@dimen/space_x_large"
     tools:context=".view.fragments.SocialFragment">
 
     <include layout="@layout/inc_search_bar" />
