--- a/code/app/src/main/res/navigation/navigation_graph.xml
+++ b/code/app/src/main/res/navigation/navigation_graph.xml
@@ -60,6 +60,10 @@
         <action
             android:id="@+id/action_frgPlanDetail_to_frgRecipeDetail"
             app:destination="@id/frgRecipeDetail" />
+        <argument
+            android:name="argFromSocial"
+            app:argType="boolean"
+            android:defaultValue="false" />
     </fragment>
 
     <fragment
