--- a/code/app/src/main/res/layout/recycler_item_social_plan_overlay.xml
+++ b/code/app/src/main/res/layout/recycler_item_social_plan_overlay.xml
@@ -36,7 +36,7 @@
 
         <TextView
             android:id="@+id/txtHeartCount"
-            style="@style/ButtonTertiary"
+            style="@style/TextMedium"
             android:layout_width="wrap_content"
             android:paddingStart="@dimen/space_small"
             android:paddingTop="@dimen/space_xxx_small"
