--- a/code/app/src/main/res/layout/inc_profile_header.xml
+++ b/code/app/src/main/res/layout/inc_profile_header.xml
@@ -2,17 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imgAvatar"
-        android:contentDescription="@string/avatar"
-
+    <androidx.cardview.widget.CardView
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_profile" />
+        android:layout_margin="8dp"
+        app:cardCornerRadius="32dp"
+        app:cardElevation="0dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
+
+        <ImageView
+            android:id="@+id/imgAvatar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/avatar" />
+    </androidx.cardview.widget.CardView>
 
     <Space style="@style/SpaceMedium" />
 
