Feat: fit to proposal

--- a/code/app/src/main/res/layout/fragment_settings.xml
+++ b/code/app/src/main/res/layout/fragment_settings.xml
@@ -30,6 +30,11 @@
         android:id="@+id/incInpThemeModes"
         layout="@layout/inc_labeled_input_text" />
 
+<!--    <Space style="@style/SpaceXLarge" />-->
+<!--    <include-->
+<!--        android:id="@+id/incInpFonts"-->
+<!--        layout="@layout/inc_labeled_input_text" />-->
+
     <Space style="@style/SpaceXLarge" />
 
     <Button
